@@ -1,5 +1,6 @@
 2014/12/02:
 Removed support for the $previouserror keyword.
+Removed support for --error-recovery mode.
 
 2014/02/18:
 In the Coq backend, use ' instead of _ as separator in identifiers.
